--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate data differences from HTTP archive files",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "process": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/sbimochan/har-diff/issues"
   },
-  "homepage": "https://github.com/sbimochan/har-diff#readme"
+  "homepage": "https://github.com/sbimochan/har-diff#readme",
+  "dependencies": {
+    "har-to-mocks": "^1.2.0",
+    "inquirer": "^9.2.17"
+  },
+  "type": "module"
 }
