--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Generate data differences from HTTP archive files",
   "main": "index.js",
   "scripts": {
-    "process": "node src/index.js"
+    "process": "node src/index.js",
+    "prettify": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,10 @@
     "har-to-mocks": "^1.2.0",
     "inquirer": "^9.2.17"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "prettier": "3.2.5"
+  }
 }
